Ajuste a valor de cartas de letras y documentacion